<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+search_id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+search_id/patientIdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+search_id/patientIdEditText"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/patient_id_hint"
            android:inputType="text"
            android:tag="@string/patient_id" />

        <Button
            android:id="@+search_id/scanBarcodeButton"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode" />

    </LinearLayout>

    <TableLayout
        android:id="@+search_id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <RadioGroup
            android:id="@+search_id/genderRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+search_id/maleRadioButton"
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+search_id/femaleRadioButton"
                style="@style/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <LinearLayout
            android:id="@+search_id/ageLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+search_id/ageGroupSpinner"
                style="@style/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/age_gropus"
                android:prompt="@string/option_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+search_id/nameLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+search_id/firstNameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName"
                android:textAppearance="@style/edit" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+search_id/lastNameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:inputType="textPersonName"
                android:textAppearance="@style/edit"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+search_id/searchButton"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_patients" />
    </TableLayout>

    <ScrollView
        android:id="@+search_id/resultsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+search_id/searchResultsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+search_id/searchAgainButton"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_again" />

            <RadioGroup
                android:id="@+search_id/patientsRadioGroup"
                style="@style/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</LinearLayout>