<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_id_mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/tiny" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/childtb_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Chocolate"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/login_id_usernameTableRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny" >

        <TextView
            android:id="@+id/login_id_textView1"
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:visibility="gone" />

        <EditText
            android:id="@+id/login_id_usernameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/login_name_hint"
            android:tag="@string/login_name"
            android:textColor="@color/Chocolate"
            android:textSize="@dimen/large"
            android:typeface="monospace" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/login_id_passwordTableRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny" >

        <TextView
            android:id="@+id/login_id_textView2"
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:visibility="gone" />

        <EditText
            android:id="@+id/login_id_passwordEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:tag="@string/password"
            android:textColor="@color/Chocolate"
            android:textSize="@dimen/large"
            android:typeface="sans" />
    </TableRow>

    <Button
        android:id="@+id/login_id_loginButton"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <CheckBox
        android:id="@+id/login_id_offlineCheckBox"
        style="@style/plain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/endtb_logo" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_weight="0.22"
        android:src="@drawable/irdsa_new" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:src="@drawable/tbreach_new" />

</TableLayout>